GNOME Bugzilla – Bug 795874
omx: always consider component in 'invalid' state when an error occured
Last modified: 2018-06-08 07:37:49 UTC
.
Created attachment 371768 [details] [review] omx: always consider component in 'invalid' state when an error occured gst_omx_component_get_state() used to early return if there was no pending state change. So if the component raised an error it wasn't considered in the invalid state until the next requested state change. Fix this by checking first if we received an error.
Review of attachment 371768 [details] [review]: Go ahead.
Attachment 371768 [details] pushed as 3498f81 - omx: always consider component in 'invalid' state when an error occured